--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@ section#topo {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url("../img/quinta-imagem.png");
+    background: url("../img/banner-topo.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
